--- a/.gitconfig
+++ b/.gitconfig
@@ -14,3 +14,4 @@
     pp = "!f() { git pull && git push; }; f"
     amid = "!f() { git diff $1..$2 --name-status; }; f"
     l = log --graph
+    reset-chmod = "!git diff -p | grep -E \"^(diff|old mode|new mode)\" | sed -e \"s/^old/NEW/;s/^new/old/;s/^NEW/new/\" | git apply"
